--- a/Branding-&-Identity.html
+++ b/Branding-&-Identity.html
@@ -96,7 +96,9 @@
           <a href="https://t.me/DVfromtheeast" target="_blank"
             ><i class="fa-brands fa-telegram"></i
           ></a>
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/dvfromtheeast/" target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
         </div>
       </div>
     </footer>
