--- a/LP-Mmenu.html
+++ b/LP-Mmenu.html
@@ -68,18 +68,25 @@
           </div>
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat urna
-          ac mauris. Congue risus quis quam lectus urna placerat arcu malesuada
-          proin. Leo ac eu et ac mauris maecenas euismod massa pellentesque.
+          Mmenu is a software development company that provides digital
+          solutions and devices to the merchants in the F&B industry. This brand
+          needs to showcase to a very particular audience - the business owners,
+          to emphasize personality, pros and capacity of its products.
+          <br /><br />
+          <b>Role:</b> UI/UX designer, Photo Editer, Frontend Dev<br /><br />
+          <b>Timeline:</b> 2 months<br /><br />
+          <b>Tools:</b> Figma, Squarespace, Photoshop
         </p>
         <img src="./images/LP-Mmenu/1.png" alt="Mmenu landing page cover" />
         <div class="row">
-          <h3>Visual design</h3>
+          <h3>Result</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            The website is focused on attracting the business owners who are
+            willing to apply technology to their operation system in order to
+            cut loss and optimize the benefit, so the design should support that
+            idea. Brand color, round shapes, enticing images and clean typeface
+            create an attractive and peaceful environment that facilitates
+            learning about the brand and its products.
           </p>
         </div>
         <img src="./images/LP-Mmenu/2.png" alt="Mmenu landing page design" />
