--- a/LP-Sun-Medical-Center.html
+++ b/LP-Sun-Medical-Center.html
@@ -68,21 +68,26 @@
           </div>
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat urna
-          ac mauris. Congue risus quis quam lectus urna placerat arcu malesuada
-          proin. Leo ac eu et ac mauris maecenas euismod massa pellentesque.
+          Sun Medical Center is a clinic based in Ha Noi. The website offers
+          appointment booking, contact and information about its services and
+          doctors. The Interface should be practical, easy to use and neatly
+          organized with large amount of content.
+          <br /><br />
+          <b>Role:</b> UI designer<br /><br />
+          <b>Timeline:</b> 2 months<br /><br />
+          <b>Tools:</b> Figma, Illustrator
         </p>
         <img
           src="./images/LP-Sun-Medical-Center/1.png"
           alt="Sun landing page cover"
         />
         <div class="row">
-          <h3>Visual design</h3>
+          <h3>Result</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            The design radiates professionalism, credibility and trustworthiness
+            owing to the sensible using of color, light background, legible
+            texts in a clean layout. The website became transparent, informative
+            and a convenient tool for the users to communicate.
           </p>
         </div>
         <img
