--- a/LP-Uranium.html
+++ b/LP-Uranium.html
@@ -68,18 +68,25 @@
           </div>
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat urna
-          ac mauris. Congue risus quis quam lectus urna placerat arcu malesuada
-          proin. Leo ac eu et ac mauris maecenas euismod massa pellentesque.
+          Uranium Finance is a crypto token. Uranium Finance provides a
+          decentralized financial asset that rewards users through financial
+          protocol. The keys for its landing page are the simplicity and
+          convenience, offering users a smooth experience without overloading
+          and complicated data visual.
+          <br /><br />
+          <b>Role:</b> UI/UX designer<br /><br />
+          <b>Timeline:</b> 2 months<br /><br />
+          <b>Tools:</b> Figma, Illustrator, Photoshop
         </p>
         <img src="./images/LP-Uranium/1.png" alt="Uranium landing page cover" />
         <div class="row">
-          <h3>Visual design</h3>
+          <h3>Result</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            The webpage has been designed with simplicity and efficiency in
+            mind. With a dark background and few gentle, abstract graphic
+            elements, The site has a modern and stylish look. Being easy to
+            navigate, and it's also simple enough for people who aren't familiar
+            with cryptocurrencies to understand what they're looking at.
           </p>
         </div>
         <img
@@ -87,12 +94,11 @@
           alt="Uranium landing page design"
         />
         <div class="row">
-          <h3>Visual design</h3>
+          <h3>Popup Overlay</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            The design of the popup also follows the principle of simplicity but
+            still stands out enough with a subtle abstract pattern in the
+            background.
           </p>
         </div>
         <img
@@ -100,12 +106,10 @@
           alt="Uranium coming soon page design"
         />
         <div class="row">
-          <h3>Visual design</h3>
+          <h3>Sub-pages</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            Stay consistent with the design system. Minimal illustrations and
+            colors were used in a reasonable way to make a great experience.
           </p>
         </div>
         <img src="./images/LP-Uranium/4.png" alt="Uranium dashboard design" />
