--- a/Landing-Page-Design.html
+++ b/Landing-Page-Design.html
@@ -62,6 +62,10 @@
           <a href="./works"><i class="fa-solid fa-caret-left"></i></a>
           <div class="tittle">
             <h2>Landing Page Design</h2>
+            <p>
+              The first impression for your customers, investors and partners
+              when they get to know your business
+            </p>
           </div>
         </div>
         <div class="work_cards">
@@ -72,8 +76,8 @@
                 <h3>Mmenu</h3>
               </div>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-                nobis cum, distinctio quisquam, molestiae illum vel animi.
+                Website of Mmenu - a software company that provides holistic
+                digital services and devices for merchants in F&B industry.
               </p>
               <div class="tag">
                 <p>Web</p>
@@ -88,11 +92,11 @@
             <div class="card_text">
               <div class="card_title">
                 <img src="./images/Uranium_logo.png" />
-                <h3>Uranium</h3>
+                <h3>Uranium Finance</h3>
               </div>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-                nobis cum, distinctio quisquam, molestiae illum vel animi.
+                Uranium Finance landing page shows the protocol, roadmap and
+                other information about a DeFi asset for the token holders.
               </p>
               <div class="tag">
                 <p>Web</p>
@@ -114,8 +118,9 @@
                 <h3>Sun Medical</h3>
               </div>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-                nobis cum, distinctio quisquam, molestiae illum vel animi.
+                Sun Medical Center is a clinic based in Ha Noi. The website
+                offers appointment booking, contact and information about its
+                services and doctors.
               </p>
               <div class="tag">
                 <p>Web</p>
@@ -156,7 +161,9 @@
           <a href="https://t.me/DVfromtheeast" target="_blank"
             ><i class="fa-brands fa-telegram"></i
           ></a>
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/dvfromtheeast/" target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
         </div>
       </div>
     </footer>
