--- a/Mmenu-for-End-User.html
+++ b/Mmenu-for-End-User.html
@@ -66,35 +66,63 @@
           </div>
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat urna ac mauris. Congue risus quis quam lectus urna placerat arcu malesuada proin. Leo ac eu et ac mauris maecenas euismod massa pellentesque. 
+          Mmenu for End User is an engagement web app that provides a digital menu, process tracking and  payment methods. The customers can do all the ordering process just by QR code scanning without further face-to-face interaction due to contact restriction requirement during the Covid pandemic.
+          <br /><br />
+          <b>Role:</b> UX researcher, UI designer<br /><br />
+          <b>Timeline:</b> 4 months<br /><br />
+          <b>Tools:</b> Figma, Illustrator, Slack
         </p>
         <img src="./images/MMenu for end user/1.png" alt="Scan QR code">
         <div class="row">
-          <h3>Visual design</h3>
-          <p>Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat urna ac mauris. Congue risus quis quam lectus urna placerat arcu malesuada proin. Leo ac eu et ac mauris maecenas euismod massa pellentesque. </p>
+          <h3>Goals</h3>
+          <p>Good user experience with a practical, easy to use interface and quick process to place order. 
+            The screens should display neat and sufficient contents to diners and merchants’s needs.</p>
+        </div>
+        <div class="row">
+          <h3>Conclusion</h3>
+          <p>After trying several top food menu apps and from the local market competitors, interviewing the business owners, their staffs and customers. My team got the detailed analysis of user problems and desires:<br /><br />
+            - A clean layout and convenient category display<br />
+            - Legible contents<br />
+            - Easy to use<br />
+            - Many dishes have long name<br />
+            - Many dishes have size and extra topping<br />
+            - Promotion and loyalty program</p>
         </div>
         <img src="./images/MMenu for end user/2.png" alt="Screens and Style">
         <div class="row">
           <h3>Visual design</h3>
-          <p>Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat urna ac mauris. Congue risus quis quam lectus urna placerat arcu malesuada proin. Leo ac eu et ac mauris maecenas euismod massa pellentesque. </p>
+          <p>With tight width and space between from Open Sans font, this allows more characters can be displayed on a single text area. As a result, we can display more content without worrying about breaking the layout and still highly legible.<br />
+            As an impactful color in the  F&B industry and also the brand color of Mmenu, Red was chosen to be primary color. </p>
         </div>
         <img src="./images/MMenu for end user/3.png" alt="Flow pick meals and order">
         <div class="row">
-          <h3>Visual design</h3>
-          <p>Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat urna ac mauris. Congue risus quis quam lectus urna placerat arcu malesuada proin. Leo ac eu et ac mauris maecenas euismod massa pellentesque. </p>
+          <div><h4>User flow</h4>
+            <h3>Place order</h3>
+          </div>
+          <p>After scanning QR code, users view the menu which contains a list of dishes and categories on the left bar. Users can pick size, extra topping and add note in dish detail screen. All the selected dishes will be listed in cart. In this step, users can add coupon and enter personal information ( required or optional)  before confirming order. </p>
         </div>
         <img src="./images/MMenu for end user/4.png" alt="View offering progress and edit order">
         <div class="row">
-          <h3>Visual design</h3>
-          <p>Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat urna ac mauris. Congue risus quis quam lectus urna placerat arcu malesuada proin. Leo ac eu et ac mauris maecenas euismod massa pellentesque. </p>
+          <div><h4>User flow</h4>
+            <h3>Track process</h3>
+          </div>
+          <p>After placing order, users can view the process, dishes status and still can change or request to change order. Users can’t change order when dish is in  “cooking” and “done” states. </p>
         </div>
         <img src="./images/MMenu for end user/5.png" alt="Flow payment">
         <img src="./images/MMenu for end user/6.png" alt="Payment states">
         <div class="row">
-          <h3>Visual design</h3>
-          <p>Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat urna ac mauris. Congue risus quis quam lectus urna placerat arcu malesuada proin. Leo ac eu et ac mauris maecenas euismod massa pellentesque. </p>
+          <div><h4>User flow</h4>
+            <h3>Payment</h3>
+          </div>
+          <p>There are different payment options for users after finishing the meal, which can be set by business owners in Mmenu for Admin. Users can view a digital receipt after picking a payment method.</p>
         </div>
         <img src="./images/MMenu for end user/7.png" alt="View activity history">
+        <div class="row">
+          <div><h4>User flow</h4>
+            <h3>Activity history</h3>
+          </div>
+          <p>Activity History feature allows users to view previous order and payment details from restaurants, cafes or bar also in Mmenu system.</p>
+        </div>
       </div>
     </div>
     <!-- dec -->
