--- a/UI-UX-for-SaaS.html
+++ b/UI-UX-for-SaaS.html
@@ -62,6 +62,11 @@
           <a href="./works"><i class="fa-solid fa-caret-left"></i></a>
           <div class="tittle">
             <h2>UI/UX for SaaS</h2>
+            <p>
+              User experience should always be a top priority. Consistent,
+              efficient and conscious UI and UX design is key factor for every
+              digital product’s success.
+            </p>
           </div>
         </div>
         <div class="work_cards">
@@ -76,8 +81,9 @@
                 <h3>for End User</h3>
               </div>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-                nobis cum, distinctio quisquam, molestiae illum vel animi.
+                Mmenu for End User is a mobile web app that helps customer
+                access a digital menu, track the process and make online payment
+                by QR code scanning.
               </p>
               <div class="tag">
                 <p>Web</p>
@@ -95,8 +101,9 @@
                 <h3>Vietrip</h3>
               </div>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-                nobis cum, distinctio quisquam, molestiae illum vel animi.
+                Vietrip is a system of tour packages booking managements for
+                tourists as well as services provider. It also offers on-going
+                tour tracking and other services.
               </p>
               <div class="tag">
                 <p>Ios</p>
@@ -114,8 +121,10 @@
                 <h3>POMA</h3>
               </div>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-                nobis cum, distinctio quisquam, molestiae illum vel animi.
+                Poma is a smart building management application. Poma helps
+                residents to interact with each others and with the Building
+                Management Board. Residents can access to building‘s other
+                services.
               </p>
               <div class="tag">
                 <p>Ios</p>
@@ -137,8 +146,8 @@
                 <h3>for Admin</h3>
               </div>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-                nobis cum, distinctio quisquam, molestiae illum vel animi.
+                Mmenu for Admin is a holistic cross-platform management software
+                for F&B business operations.
               </p>
               <div class="tag">
                 <p>Ios</p>
@@ -161,8 +170,9 @@
                 <h3>MMENU Inventory</h3>
               </div>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-                nobis cum, distinctio quisquam, molestiae illum vel animi.
+                Mmenu Inventory is one of the main features of Mmenu for Admin.
+                However, it also stands as a separate product that helps in
+                stock management.
               </p>
               <div class="tag">
                 <p>Ios</p>
@@ -204,7 +214,9 @@
           <a href="https://t.me/DVfromtheeast" target="_blank"
             ><i class="fa-brands fa-telegram"></i
           ></a>
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/dvfromtheeast/" target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
         </div>
       </div>
     </footer>
