--- a/Vietrip.html
+++ b/Vietrip.html
@@ -66,33 +66,55 @@
           </div>
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat urna
-          ac mauris. Congue risus quis quam lectus urna placerat arcu malesuada
-          proin. Leo ac eu et ac mauris maecenas euismod massa pellentesque.
+          Vietrip is a system of tour packages booking managements for tourists
+          as well as services provider. It also offers on-going tour tracking
+          and other services.
+          <br /><br />
+          <b>Role:</b> UI/UX designer, Illustrator<br /><br />
+          <b>Timeline:</b> 4 months<br /><br />
+          <b>Tools:</b> Figma, Illustrator
         </p>
         <img src="./images/Vietrip/1.png" alt="Vietrip cover" />
         <div class="row">
-          <h3>Visual design</h3>
+          <h3>Goals</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            Make the tour booking experience easier and more enjoyable. Beside
+            that, this app also contains other features for Visa service, chat
+            room and process tracking. The interface should be easy to use and
+            well-organized with large amount of content.
+          </p>
+        </div>
+        <div class="row">
+          <h3>Conclusion</h3>
+          <p>
+            By searching and collecting information about client’s business and
+            trying other apps and website which have the similar business model.
+            My team has came up with ideas and solutions that can enhance the
+            product value. Next my team worked on wireframes before processing
+            with visual design.
           </p>
         </div>
         <img src="./images/Vietrip/2.png" alt="Screens and Style" />
         <div class="row">
           <h3>Visual design</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            This mobile app featured material design as the design system. The
+            app design was not only focused to the people who search for tour
+            packages or articles but also to those who are always on the go.<br />
+            The brand colors gave the contrast its needed between elements and i
+            have gave specific role to each color in the interface, green for
+            CTA and pink for emphasized content.<br />
+            The button components have gradient background to stands out from
+            the surface. Users can interact more comfortably while being outside
+            with the objects that have depth.
           </p>
         </div>
         <img src="./images/Vietrip/3.png" alt="Onboarding and log in" />
         <div class="row">
-          <h3>Visual design</h3>
+          <div>
+            <h4>User flow</h4>
+            <h3>On boarding/ Log In</h3>
+          </div>
           <p>
             Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
             urna ac mauris. Congue risus quis quam lectus urna placerat arcu
@@ -104,14 +126,24 @@
           src="./images/Vietrip/4.png"
           alt="View home screens and packages"
         />
-        <p>
-          Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat urna
-          ac mauris. Congue risus quis quam lectus urna placerat arcu malesuada
-          proin. Leo ac eu et ac mauris maecenas euismod massa pellentesque.
-        </p>
+        <div class="row">
+          <div>
+            <h4>User flow</h4>
+            <h3>Tour booking</h3>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
+            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
+            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
+            pellentesque.
+          </p>
+        </div>
         <img src="./images/Vietrip/5.png" alt="Package detail" />
         <div class="row">
-          <h3>Visual design</h3>
+          <div>
+            <h4>User flow</h4>
+            <h3>Tour packages detail</h3>
+          </div>
           <p>
             Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
             urna ac mauris. Congue risus quis quam lectus urna placerat arcu
@@ -121,7 +153,10 @@
         </div>
         <img src="./images/Vietrip/6.png" alt="Articles" />
         <div class="row">
-          <h3>Visual design</h3>
+          <div>
+            <h4>User flow</h4>
+            <h3>Travel guide</h3>
+          </div>
           <p>
             Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
             urna ac mauris. Congue risus quis quam lectus urna placerat arcu
@@ -131,7 +166,10 @@
         </div>
         <img src="./images/Vietrip/7.png" alt="View activity history" />
         <div class="row">
-          <h3>Visual design</h3>
+          <div>
+            <h4>User flow</h4>
+            <h3>Group chat</h3>
+          </div>
           <p>
             Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
             urna ac mauris. Congue risus quis quam lectus urna placerat arcu
@@ -140,6 +178,18 @@
           </p>
         </div>
         <img src="./images/Vietrip/8.png" alt="View activity history" />
+        <div class="row">
+          <div>
+            <h4>User flow</h4>
+            <h3>Account - Visa service</h3>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
+            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
+            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
+            pellentesque.
+          </p>
+        </div>
       </div>
     </div>
     <!-- dec -->
