--- a/aboutme.html
+++ b/aboutme.html
@@ -69,20 +69,20 @@
             <div class="profilepic_dec"></div>
           </div>
           <p>
-            Hello! My name is Duc Vuong or you can just call me DV. <br />
-            I’m a freelance designer and a digital artist from Vietnam. I enjoy
+            Hello! My name is Duc Vuong or you can just call me <b>DV</b>.<br />
+            I’m a freelance designer and illustrator from Vietnam. I enjoy
             creating design for digital products on every platform. Additionally
             i also create website with HTML, CSS, JS or with other website
             development services.<br /><br />
-            I have graduated from Hanoi University of Industrial Fine Art with
-            bachelor degree. Initially I have earned 5 years experience in
-            branding design, print design and illustration during working in
-            agencies and start-ups. In early 2018, I had my interest in
-            designing Game Concept Art and Game User Interface when i joined a
-            mobile game studio. During that time i had opportunity to work on
-            Mobile Management App projects and i constantly focused on UI/UX
-            Research and UI Design. I have learned myself Material Design and
-            Human Interface Guidelines. After that i switch completely to
+            I have graduated from Hanoi University of Industrial Fine Art with a
+            Bachelor in Industrial and Product Design. Initially I have earned 5
+            years experience in branding design, print design and illustration
+            during working in agencies and start-ups. In early 2018, I had my
+            interest in designing Game Concept Art and Game User Interface when
+            i joined a mobile game studio. During that time i had opportunity to
+            work on Mobile Management App projects and i constantly focused on
+            UI/UX Research and UI Design. I have learned myself Material Design
+            and Human Interface Guidelines. After that i switch completely to
             working on Applications because to me each Application has it own
             important role and can affect significantly to many aspects of human
             ‘s life. When i worked with dev teams, I have learned HTML and CSS
@@ -91,10 +91,6 @@
             productive together and less conflict.<br /><br />
             Today, my main focus is designing accessible digital products &
             services for clients.<br /><br />
-            <!-- Friendly, optimistic and energetic, never hesitate to learn and
-            explore, always cooperate and try to find a way to reach new
-            milestones, satisfy clients, improve myself and people around me,
-            keen to contribute to the community.<br /><br /> -->
             If you have a project you want to discuss, feel free to
             <a href="./contact"> <b> Get In Touch </b></a>
             with me and we can find the best way to help you to take your
@@ -130,7 +126,9 @@
           <a href="https://t.me/DVfromtheeast" target="_blank"
             ><i class="fa-brands fa-telegram"></i
           ></a>
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/dvfromtheeast/" target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
         </div>
       </div>
     </footer>
