--- a/contact.html
+++ b/contact.html
@@ -116,6 +116,13 @@
                 <i class="material-icons">arrow_outward</i>
                 <p>Discord</p>
               </a>
+              <a
+                href="https://www.linkedin.com/in/dvfromtheeast/"
+                target="_blank"
+              >
+                <i class="material-icons">arrow_outward</i>
+                <p>Linkedin</p>
+              </a>
             </div>
           </div>
         </div>
