--- a/skills.html
+++ b/skills.html
@@ -69,59 +69,60 @@
             <i class="fa-solid fa-laptop"></i>
             <div class="skill_text">
               <h4>UI/UX Design</h4>
-              <p>Lorem ipsum dolor sit amet contur.</p>
+              <p>I create amazing experience with flow and design system.</p>
             </div>
           </div>
           <div class="skill">
             <i class="fa-regular fa-window-maximize"></i>
             <div class="skill_text">
               <h4>Website Design</h4>
-              <p>
-                Lorem ipsum dolor sit amet contur. Tincidunt sed tempor fus,
-                Tincidunt sed tempor fus
-              </p>
+              <p>I design the most fitting interfaces for your business.</p>
             </div>
           </div>
           <div class="skill">
             <i class="fa-solid fa-laptop-code"></i>
             <div class="skill_text">
               <h4>Frontend Dev</h4>
-              <p>Lorem ipsum dolor sit amet contur. Tincidunt sed tempor fus</p>
+              <p>I create web pages with HTML, CSS and JS to your needs.</p>
             </div>
           </div>
           <div class="skill">
             <i class="fa-solid fa-magnifying-glass-chart"></i>
             <div class="skill_text">
               <h4>UX Research</h4>
-              <p>Lorem ipsum dolor sit amet contur. Tincidunt sed tempor fus</p>
+              <p>A method to understand users for problems solving.</p>
             </div>
           </div>
           <div class="skill">
             <i class="fa-regular fa-copyright"></i>
             <div class="skill_text">
               <h4>Logo & Branding</h4>
-              <p>Lorem ipsum dolor sit amet contur. Tincidunt sed tempor fus</p>
+              <p>
+                I help make your brand consistent, impactful, and memorable.
+              </p>
             </div>
           </div>
           <div class="skill">
             <i class="fa-solid fa-chart-line"></i>
             <div class="skill_text">
               <h4>Data Visualization</h4>
-              <p>Lorem ipsum dolor sit amet contur. Tincidunt sed tempor fus</p>
+              <p>I visualize and simplify complex data in a creative way.</p>
             </div>
           </div>
           <div class="skill">
             <i class="fa-solid fa-palette"></i>
             <div class="skill_text">
               <h4>Illustration</h4>
-              <p>Lorem ipsum dolor sit amet contur. Tincidunt sed tempor fus</p>
+              <p>I create various styles of illustration for your project.</p>
             </div>
           </div>
           <div class="skill">
             <i class="fa-solid fa-shapes"></i>
             <div class="skill_text">
               <h4>Print Design</h4>
-              <p>Lorem ipsum dolor sit amet contur. Tincidunt sed tempor fus</p>
+              <p>
+                I ensure the design will meet your branding and marketing plan.
+              </p>
             </div>
           </div>
         </div>
@@ -164,7 +165,9 @@
           <a href="https://t.me/DVfromtheeast" target="_blank"
             ><i class="fa-brands fa-telegram"></i
           ></a>
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/dvfromtheeast/" target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
         </div>
       </div>
     </footer>
