--- a/POMA.html
+++ b/POMA.html
@@ -66,13 +66,26 @@
           </div>
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat urna
-          ac mauris. Congue risus quis quam lectus urna placerat arcu malesuada
-          proin. Leo ac eu et ac mauris maecenas euismod massa pellentesque.
+          Poma is a smart building management application. Poma helps residents
+          to interact with each others and with the Building Management Board.
+          Residents can access to building‘s other services.
+          <br /><br />
+          <b>Role:</b> UI designer<br /><br />
+          <b>Timeline:</b> 3 months<br /><br />
+          <b>Tools:</b> Figma, Illustrator
         </p>
         <img src="./images/Poma/1.png" alt="Poma cover" />
         <div class="row">
-          <h3>Visual design</h3>
+          <h3>Goals</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
+            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
+            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
+            pellentesque.
+          </p>
+        </div>
+        <div class="row">
+          <h3>Conclusion</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
             urna ac mauris. Congue risus quis quam lectus urna placerat arcu
@@ -92,7 +105,10 @@
         </div>
         <img src="./images/Poma/3.png" alt="Registration flow" />
         <div class="row">
-          <h3>Visual design</h3>
+          <div>
+            <h4>User flow</h4>
+            <h3>Lorem ipsum</h3>
+          </div>
           <p>
             Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
             urna ac mauris. Congue risus quis quam lectus urna placerat arcu
@@ -106,7 +122,10 @@
         />
         <img src="./images/Poma/5.png" alt="View news screens" />
         <div class="row">
-          <h3>Visual design</h3>
+          <div>
+            <h4>User flow</h4>
+            <h3>Lorem ipsum</h3>
+          </div>
           <p>
             Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
             urna ac mauris. Congue risus quis quam lectus urna placerat arcu
@@ -116,7 +135,10 @@
         </div>
         <img src="./images/Poma/6.png" alt="Request screens" />
         <div class="row">
-          <h3>Visual design</h3>
+          <div>
+            <h4>User flow</h4>
+            <h3>Lorem ipsum</h3>
+          </div>
           <p>
             Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
             urna ac mauris. Congue risus quis quam lectus urna placerat arcu
@@ -126,7 +148,10 @@
         </div>
         <img src="./images/Poma/7.png" alt="Bill screens" />
         <div class="row">
-          <h3>Visual design</h3>
+          <div>
+            <h4>User flow</h4>
+            <h3>Lorem ipsum</h3>
+          </div>
           <p>
             Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
             urna ac mauris. Congue risus quis quam lectus urna placerat arcu
@@ -136,7 +161,10 @@
         </div>
         <img src="./images/Poma/8.png" alt="Utilities and Services" />
         <div class="row">
-          <h3>Visual design</h3>
+          <div>
+            <h4>User flow</h4>
+            <h3>Lorem ipsum</h3>
+          </div>
           <p>
             Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
             urna ac mauris. Congue risus quis quam lectus urna placerat arcu
@@ -145,31 +173,24 @@
           </p>
         </div>
         <img src="./images/Poma/9.png" alt="Other information" />
+        <div class="row">
+          <div>
+            <h4>User flow</h4>
+            <h3>Lorem ipsum</h3>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
+            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
+            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
+            pellentesque.
+          </p>
+        </div>
       </div>
     </div>
     <!-- dec -->
     <div class="dec">
       <img src="./images/DV_BG.svg" alt="DV BG" />
     </div>
-    <!-- footer -->
-    <!-- <footer>
-      <div class="footer">
-        <div class="footer_logo">
-          <img src="./images/Logo_DV_Footer.svg" alt="DV logo footer" />
-        </div>
-        <div class="footer_text">
-          <h3>Duc Vuong</h3>
-          <p>dominik4793@gmail.com</p>
-          <p>vuongduc47@gmail.com</p>
-        </div>
-        <div class="footer_social">
-          <a href="https://twitter.com/DV_fromtheEast" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-          <a href="https://discordapp.com/users/440616189656432661/" target="_blank"><i class="fa-brands fa-discord"></i></a>
-          <a href="https://t.me/DVfromtheeast" target="_blank"><i class="fa-brands fa-telegram"></i></a>
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-        </div>
-      </div>
-    </footer> -->
     <script
       src="https://kit.fontawesome.com/3b84c2c88e.js"
       crossorigin="anonymous"
